# aninfo

./: Cargo.toml  index.html  styles.css
docs/: aninfo_v2-28fed44ed5469d99.js  aninfo_v2-28fed44ed5469d99_bg.wasm  aninfo_v2-4e6d073ad301fcdc.js  aninfo_v2-4e6d073ad301fcdc_bg.wasm  aninfo_v2-51cafc425431a90c.js  aninfo_v2-5857c33447ccde28.js  aninfo_v2-5857c33447ccde28_bg.wasm  aninfo_v2-585f92b053d6fcd4.js  aninfo_v2-585f92b053d6fcd4_bg.wasm  aninfo_v2-6f2a9cb9577f341a.js  aninfo_v2-7faac86ba83c92ed.js  aninfo_v2-7faac86ba83c92ed_bg.wasm  aninfo_v2-ac344da8fdd9d112.js  aninfo_v2-ac344da8fdd9d112_bg.wasm  aninfo_v2-fa73bab4405f6046.js  aninfo_v2-fa73bab4405f6046_bg.wasm  index.html  mobile-28728da50756971f.css  mobile-cc9bc8eee4ab70be.css  mobile-eb3a04b37c34b0c0.css  styles-75e52d80aadcf2e4.css  styles-c1510fa44b5ae921.css  styles-c8c7526b9d139a95.css  styles-cbdce8cd4c97e488.css  styles-e07949f50baaa9e8.css  styles-f298ff1eecea4b02.css  styles-fb8090f50c938f6d.css
src/: body_bg.rs  lib.rs  main.rs  test.html  utils.rs
src/components/: TEMPLATE.rs  about_page.rs  anime_card.rs  anime_desc.rs  anime_result.rs  anime_result_v2.rs  animeobjcontext_provider.rs  appcontext_provider.rs  back_btn.rs  char_card.rs  episode_card.rs  footer.rs  home_page.rs  loading.rs  mod.rs  privacy_policy.rs  routes.rs  seasonal.rs  stores.rs  top_navbar.rs
src/docs/: aninfo-669a91a08dca0aaa.js  aninfo-669a91a08dca0aaa_bg.wasm  index.html  styles-d01f3ee81093a362.css
