[package]
name = "aninfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
gloo = "0.11.0"
reqwasm = "0.5.0"
serde = "1.0.197"
serde_json = "1.0.114"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "HtmlElement", "KeyboardEvent", "Document", "Element", "Window"]}
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
